# spindle-token

./: .gitignore  404.html  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PROTOCOL.md  README.md  RELEASE.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml
CODE_OF_CONDUCT/: index.html
CONTRIBUTING/: index.html
LICENSE/: index.html
api/: index.html
carduus/: cli.py  keys.py
carduus/api/: index.html
carduus/cli/: index.html
carduus/guides/custom-tokens/: index.html
carduus/guides/databricks/: index.html
carduus/guides/getting-started/: index.html
carduus/token/: __init__.py  _impl.py  crypto.py  pii.py
cli/: index.html
docs/: CNAME  api.md  cli.md
docs/carduus/: api.md  cli.md
docs/carduus/guides/: custom-tokens.md  databricks.ipynb  getting-started.md
docs/guides/: custom-tokens.md  databricks-spark35.ipynb  databricks-spark4.ipynb  databricks.ipynb  getting-started.md  migrating-from-carduus.md
docs/opprl/: contrib.md
docs/stylesheets/: extra.css
guides/custom-pii/: index.html
guides/custom-tokens/: index.html
guides/databricks/: index.html
guides/databricks-spark35/: index.html
guides/databricks-spark4/: index.html
guides/getting-started/: index.html
guides/migrating-from-carduus/: index.html
opprl/: index.html
opprl/PROTOCOL/: index.html
opprl/contrib/: index.html
private-docs/: databricks-spark4.ipynb
search/: search_index.json
src/spindle_token/: __init__.py  _cli.py  _compat.py  _crypto.py  _spark.py  _utils.py  core.py
src/spindle_token/opprl/: __init__.py  _common.py  _v2_definitions.py  metadata.py  v0.py  v1.py  v2.py
stylesheets/: extra.css
tests/: conftest.py  test_carduus_tokenize.py  test_cli.py  test_cli_v0.py  test_crypto.py  test_import_surface.py  test_opprl_metadata.py  test_packaging_integration.py  test_packaging_surface.py  test_tokenize.py
tests/performance/: test_crypto_performance.py
