[project]
name = "carduus"
version = "0.3.0"
description = "PySpark implementation of the Open Privacy Preserving Record Linkage protocol."
authors = [{ name = "Eddie Pantridge", email = "eddie@spindlehealth.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyspark (>=3.5.0,<4.0.0)",
    "jellyfish (>=1.0.3,<2.0.0)",
    "cryptography (>=44.0.1,<45.0.0)",
    "click (>=8.1.8,<9.0.0)",
]

[project.scripts]
spindle-token = "carduus.cli:cli"

[tool.poetry]
packages = [{ include = "carduus" }]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2"
pyspark = { version = "^3.5", extras = ["connect"] }
# pyspark.testing.utils breaks on numpy 2. 
numpy = "<2.0"
coverage = "^7.4"
black = "^24.4"
mypy = "^0.991"
mkdocs = ">=1.6"
mkdocs-material = ">=9.6"
mkdocstrings = ">=0.28"
mkdocstrings-python = ">=1.14.6"
mkdocs-jupyter = ">=0.25.1"
mkdocs-click = "^0.9.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 96
